# xydiff

./: .cvsignore  .gitignore  AUTHOR.TXT  INSTALL.TXT  README  README.md  autogen.sh  configure.ac
include-fake/infra/general/: Logf.hh
m4/: check_for_xercesc.m4
schemas/: Delta_schema.xsd
src/: AUTOTEST_AFTER_BUILD.sh  CommonSubSequenceAlgorithms.hpp  ComputeDelta.cpp  CreateRandomScript.cpp  DOMPrint.hpp  DeltaApply.cpp  DeltaApply.hpp  DeltaException.cpp  DeltaException.hpp  DeltaManager.cpp  DeltaManager.hpp  DeltaReverse.cpp  DeltaReverse.hpp  DeltaSortOperations.cpp  DeltaSortOperations.hpp  Diff_DeltaConstructor.cpp  Diff_DeltaConstructor.hpp  Diff_NodesManager.cpp  Diff_NodesManager.hpp  Diff_UniqueIdHandler.cpp  Diff_UniqueIdHandler.hpp  EnumVal.cpp  Make.xydiff  Makefile  Makefile.am  StringPusher.cpp  StringPusher.hpp  Tools.cpp  Tools.hpp  XID_DOMDocument.cpp  XID_map.cpp  XyCmpXidmap.cpp  XyDeltaDomImpl.cpp  XyDeltaFileImpl.cpp  XyInt.cpp  XyLatinDocument.cpp  XyLatinStr.cpp  XyLoad.cpp  XyRetrieve.cpp  XyStr.cpp  (+29 more)
src/dirtest/: version02.xml
src/include/: Makefile.am  XID_DOMDocument.hpp  XID_map.hpp  XyDelta_DOMInterface.hpp  XyDelta_FileInterface.hpp  XyInt.hpp  XyLatinDocument.hpp  XyLatinStr.hpp  XyStr.hpp  XyStr.html  XyStrDelta.hpp  XyStrDiff.hpp  XyUTF8Document.hpp  XyUTF8Str.hpp
src/include/infra/general/: Log.hpp  hash_map.hpp
src/include/xydiff/: DeltaException.hpp  VersionManagerException.hpp  XID_DOMDocument.hpp  XID_map.hpp  XyDelta_DOMInterface.hpp  XyDelta_FileInterface.hpp  XyDiffNS.hpp  XyInt.hpp  XyLatinDocument.hpp  XyLatinStr.hpp  XyStr.hpp  XyStrDelta.hpp  XyStrDiff.hpp  XyUTF8Document.hpp  XyUTF8Str.hpp
src/legacy/: xyleme_DOMPrint.cpp  xyleme_DOMPrint.hpp
src/legacy/tests/: perfXyTranscode.cpp  testLR.cpp  testXyTranscode.cpp
src/legacy/tests/dirtest/: version01.xml  version03.xml  version04.xml
src/legacy/tests/sample-data/: example1.xml  reference_example1_delta.xml  reference_personal_delta.xml
src/legacy/tools/: generateXidTaggedDocument.cpp  parseInfo.cpp
src/sample-data/: alex.xml  example1.xml  example1bis.xml  personal.dtd  personal2.xml
src/tests/: AUTOTEST_AFTER_BUILD.sh  perfXyTranscode.cpp  testProgramLibs.cpp  testSeveralDiff.cpp  testXyTranscode.cpp
src/tests/dirtest/: version05.xml
src/tests/sample-data/: alex.xml  example1.xml.xidmap
src/vc7.1/: xydiff.sln  xydiff.vcproj
src/vc8.0/: xydiff.sln  xydiff.vcproj
src/vc9.0/: xydiff.sln  xydiff.vcproj
vc8/: XyDelta.vcproj  libXyDelta.vcproj  xydeltaapply.vcproj  xydiff.vcproj  xyxidtag.vcproj
vc8/lib/: xerces-c_3D.lib
vc8/win32/: xerces-c_3.lib
