xydiffincludedir = $(includedir)
nobase_xydiffinclude_HEADERS = xydiff/XID_DOMDocument.hpp \
    xydiff/XID_map.hpp \
    xydiff/XyDelta_DOMInterface.hpp \
    xydiff/XyDelta_FileInterface.hpp \
    xydiff/XyInt.hpp \
    xydiff/XyLatinStr.hpp \
    xydiff/XyStr.hpp \
    xydiff/XyStrDelta.hpp \
    xydiff/XyStrDiff.hpp \
    xydiff/XyUTF8Document.hpp \
    xydiff/XyUTF8Str.hpp \
    xydiff/VersionManagerException.hpp \
    xydiff/DeltaException.hpp
